# deploy.py

./: .copier-answers.yml  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  SPEC.md  action.yml  deploy.show.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yaml  release.yaml
deploy/: cli.py
deploy/command/: configure.py  update.py
deploy/templates/: odoo.service.j2  python.service.j2
deploy/utils/: addons.py  config.py  executor.py  render.py  venv.py
docs/: demo.tape  getting-started.md  instance-names.md  markdown.md
docs/commands/: configure.md  index.md  status.md  update.md
overrides/: landing.html
scripts/: gen_cli_reference.py
site-docs/: zensical.toml
site-docs/docs/: cli-reference.md  configuration.md  demo-1.tape  demo-2.tape  demo.tape  getting-started.md  hooks.md
site-docs/docs/commands/: status.md  update.md
site-docs/docs/javascripts/: commit-count.js
site-docs/overrides/: landing.html
skills/deploy.py/: SKILL.md
tests/: test_config.py  test_config_multi_host.py  test_configure_config.py  test_configure_multi_host.py  test_configure_postgres.py  test_configure_server_env.py  test_configure_steps.py  test_configure_watch.py  test_executor_dry_run.py  test_executor_watch_logs.py  test_executor_watch_logs_multi.py  test_restart_multi_host.py  test_restart_watch.py  test_status_multi_host.py  test_status_watch.py  test_update_multi_host.py  test_update_steps.py  test_update_watch.py
trobz_deploy/: cli.py
trobz_deploy/command/: configure.py  restart.py  status.py  update.py
trobz_deploy/templates/: odoo.service.j2  python.service.j2  service.service.j2
trobz_deploy/utils/: addons.py  config.py  executor.py  render.py  venv.py
(+1 files in other folders)
