[project]
name = "deploy"
version = "0.3.2"
description = "CLI tool for deploying and managing applications on remote servers over SSH."
authors = [{name = "hailangvn", email = "hailn@trobz.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = "AGPL-3.0"
license-files = ["LICENSE"]

dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/trobz/deploy.py"
[project.scripts]
deploy = "deploy.cli:cli"

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
    "ty>=0.0.1a16",
    "ruff>=0.11.5",
    "pytest>=7.2.0",
    "python-semantic-release>=10.5.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "deploy"
module-root = ""


[project.optional-dependencies]
build = ["uv ~= 0.7.12"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
  python -m pip install -e '.[build]'
  uv lock --upgrade-package deploy
  git add uv.lock
  uv build
"""

# Commit parser - this should be at the top level
commit_parser = "conventional"

# Allow 0.x.x versions (prevents jumping straight to 1.0.0)
allow_zero_version = true

# Don't do major version bumps when in 0.x.x
major_on_zero = false

# Tag format
tag_format = "v{version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''initial commit.*''',
]
